# CP-Library

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
.claude/agents/: module-test-doc-generator.md
src/data-structures/: LazySegmentTreeRangeMax.hpp  LazySegmentTreeRangeSum.hpp  convex_hull_trick.hpp  disjoint_set.hpp  fenwick_tree.hpp  lichao_tree.hpp  offline_convex_hull_trick.hpp  sparse_table.hpp  treap.hpp  treap_example.hpp
template/: install_snippets.py  snippet_from_file.py
template/snippets/: modint.json
template/snippets/text/: modint.txt
test/: test_runner.cpp  test_runner.h
test/data-structures/: test_LazySegmentTreeRangeMax.cpp  test_LazySegmentTreeRangeSum.cpp  test_convex_hull_trick.cpp  test_fenwick_tree.cpp  test_lichao_tree.cpp  test_sparse_table.cpp
test/data-structures/cses1647/: main.cpp
test/data-structures/cses1648/: main.cpp
test/data-structures/cses1649/: main.cpp
test/data-structures/cses1651/: main.cpp
test/data-structures/cses1651_2/: main.cpp
test/data-structures/cses1736/: main.cpp
